# Yapper

./: .gitignore  README.md  _stdin.txt  _test_moon.py  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: distribution.md  protocol.md
scripts/: bundle-macos-python-runtime.sh  bundle-windows-python-runtime.ps1  generate-latest-json.ps1  pack-with-updater-signing.ps1  pack-with-updater-signing.sh  python-runtime-requirements-macos.txt  python-runtime-requirements.txt  updater-manifest.mjs
sidecar/: requirements-macos.txt  requirements.txt  server.py
sidecar/engines/: __init__.py  moonshine_stream.py  parakeet_sherpa.py  sherpa_common.py  sherpa_stream.py
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.tauri/: updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml  sync-windows-taskbar-icon.toml  yapper-invoke.toml
src-tauri/resources/tones/: expressive.yaml  minimal.yaml  standard.yaml
src-tauri/src/: audio.rs  db.rs  global_shortcuts.rs  hud.rs  lib.rs  node_server.rs  nvidia_libs.rs  paste.rs  paths.rs  postprocess.rs  remote_engine.rs  sidecar.rs  state.rs  trace_log.rs  win_spawn.rs  win_taskbar_icon.rs
src/lib/: formatShortcutDisplay.ts  keybindCapture.ts  liveStreamingModelInfo.ts  parakeetModelInfo.ts  shortcuts.ts  theme.ts  whisperModelInfo.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dictionary/: +page.svelte
src/routes/hud/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/transcribe/: +page.svelte
yapper-node/: main.py
