[package]
name = "yapper"
version = "0.1.0"
description = "Yapper — local-first dictation"
authors = ["Yapper"]
edition = "2021"

[lib]
name = "yapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
regex = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time", "net"] }
cpal = "0.15"
enigo = "0.3"
arboard = "3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = { version = "2", default-features = true }
sevenz-rust = "0.6"
rubato = "2.0.0"
audioadapter-buffers = "3"
